--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Mary Maloney
+<html>
+    <!DOCTYPE html>
+    <html lang="en">
+     <head>
+       <!-- Document information -->
+       <meta charset="UTF-8">
+       <title>Assignment 1</title>
+     </head>
+    
+
+
+
+</html>
