--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
                 <cite>― Albert Einstein</cite>
                 </blockquote>
           </p>
+          <!--- this is the image -->  
+             <main>
+             <img src ="about-me.jpg" alt="Mary M" width="1000" title="A Picture of Me" />
+          
+             </main>
           <!-- Document Content -->
           <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
-        </body>
+     </body>
 
 </html>
