--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           </p>
           <!--- this is the image -->  
              <main>
-             <img src ="about-me.jpg" alt="Mary M" width="1000" title="A Picture of Me" />
-          
+             <img src ="images/about-me.jpg" alt="Mary M" width="1000" title="A Picture of Me" />
+             
              </main>
           <!-- Document Content -->
           <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
