--- a/index.html
+++ b/index.html
@@ -19,9 +19,18 @@
           </p>
           <!--- this is the image -->  
              <main>
-             <img src ="images/about-me.jpg" alt="Mary M" width="650" title="A Picture of Me" />
-
+             <img src ="images/about-me.jpg" alt="Mary M" width="500" title="A Picture of Me" />
              </main>
+             <!--- my silly little list-->
+             <article>
+               <p>Some of My Hobbies</p>
+               <ul>
+                 <li>being outdoors (swimming, hiking, kayaking, camping etc)</li>
+                 <li>watching 80s fantasy films</li>
+                 <li>going to restaurants with friends</li>
+                 <li>karaoke!</li>
+               </ul>
+             </article>
           <!-- Document Content -->
           <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
      </body>
