--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      </head>
      <body>
         <h1>Mary Maloney</h1>
-        <article>dAbout Me</article>
+        <article>About Me</article>
           <p> Hello! My name is Mary Maloney. I grew up the oldest of nine children, all girls save one boy. I jokingly consider myself their second mother since I did my fair share of child rearing. Before attending Algonquin College for the Interactive Media Design program, I went to the University of Ottawa for Film Studies and English Literature. I used my extra credits on any music class I could get into, though I do not have any musical abilities to boast. I have <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr> and I’ve always prioritized following my interests rather than trying to find one set career.
             <br> 
             I <em> love</em> everything that flexes my creative muscles, drawing, dancing, and video editing are some examples. I definitely can be described as a jack of all trades, but a master of none. In addition, I love reading and outdoor activities like hiking. A fun fact about me is I would rather have salt and vinegar chips than a dessert any day. Unless it is tiramisu, which I eat a lot of because I serve part time at an Italian restaurant (which I also love).
@@ -18,19 +18,53 @@
                 </blockquote>
           </p>
           <!--- this is the image -->  
-             <main>
-             <img src ="images/about-me.jpg" alt="Mary M" width="500" title="A Picture of Me" />
-             </main>
-             <!--- my silly little list-->
-             <article>
-               <p>Some of My Hobbies</p>
-               <ul>
-                 <li>being outdoors (swimming, hiking, kayaking, camping etc)</li>
-                 <li>watching 80s fantasy films</li>
-                 <li>going to restaurants with friends</li>
-                 <li>karaoke!</li>
-               </ul>
-             </article>
+          <main>
+          <img src ="images/about-me.jpg" alt="Mary M" width="500" title="A Picture of Me" />
+          </main>
+          <!--- my silly little list-->
+            <article>
+            <p>Some of My Hobbies</p>
+            <ul>
+              <li>being outdoors (swimming, hiking, kayaking, camping etc)</li>
+              <li>watching 80s fantasy films</li>
+              <li>going to restaurants with friends</li>
+              <li>karaoke!</li>
+             </ul>
+          </article>
+          <!-- making a table-->
+          <article>
+            <table>
+              <caption>My Karaoke Songs</caption>
+              <thead>
+                <tr>
+                  <th>Song</th>
+                  <th>Artist</th>
+                  <th>Fun Rating</th>
+                </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>Basin Street Blues</td>
+                 <td>Ella Fitzgerald</td>
+                 <td>5/5</td>
+              </tr>
+              <tr>
+                <td>Music of the Night</td>
+                <td>Phantom of the Opera</td>
+                <td>1/5</td>
+              </tr>
+              <tr>
+                <td>Dreams</td>
+                <td>The Cranberries</td>
+                <td>3/5</td>
+              </tr>
+             </tbody>
+            </table>
+          </article>
+          <!--this is a fun tidbit-->
+          <article>
+            My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game</a>
+          </article>
           <!-- Document Content -->
           <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
      </body>
