--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           </article>
           <!-- Document Content -->
           <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
+          <footer>&copy; Mary Maloney 2021</footer>
      </body>
 
 </html>
