--- a/index.html
+++ b/index.html
@@ -61,13 +61,20 @@
              </tbody>
             </table>
           </article>
+          <br>
           <!--this is a fun tidbit-->
-          <article>
-            My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game</a>
-          </article>
+                 <article>
+                  <b> My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game!</a></b>
+                 </article>
+          <br>
+          <!---->
           <!-- Document Content -->
-          <footer> [1] quote retrieved from: https://www.goodreads.com/quotes </footer>
-          <footer>&copy; Mary Maloney 2021</footer>
+          <footer> 
+            <article>[1] quote retrieved from: https://www.goodreads.com/quotes</article>  
+            </footer> 
+          <footer>
+            <article>&copy;Maloney, Ottawa, 2021</article>
+          </footer>
      </body>
 
 </html>
