--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
                   <b> My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game!</a></b>
                  </article>
           <br>
-          <!---->
+          <!--started in other file by accident-->
+          <article>
+                <h2>
+                    <nav> <a href="notes.html">Notes</a>
+                    </nav>
+                </h2>
+        <article>
           <!-- Document Content -->
           <footer> 
             <article>[1] quote retrieved from: https://www.goodreads.com/quotes</article>  
