--- a/notes.html
+++ b/notes.html
@@ -9,8 +9,22 @@
     <h1>Notes</h1>
  </head>
 <body>
+<dl>
+    <dt>td</dt>
+    <dd>Td represents a table data cell, imperative tag for tables. </dd>
+
+    <dt>img</dt>
+    <dd>This tag allows you to attach pictures to your html website.</dd>
+
+    <dt>a href</dt>
+    <dd>This tag allows you to anchor a link and add the name for the link that will show up on the web page. </dd>
+
+    <dt>i</dt>
+    <dd>this tag </dd>
+
+
+</dl>
 
 
 
-    
 </body>
