--- a/notes.html
+++ b/notes.html
@@ -9,6 +9,13 @@
     <h1>Notes</h1>
  </head>
 <body>
+    <article>
+        <h3>
+            <nav>
+                <a href="index.html">Home</a>
+            </nav>
+        </h3>
+    </article>
 <dl>
     <dt>td</dt>
     <dd>Td represents a table data cell, imperative tag for tables. </dd>
@@ -20,9 +27,10 @@
     <dd>This tag allows you to anchor a link and add the name for the link that will show up on the web page. </dd>
 
     <dt>i</dt>
-    <dd>this tag </dd>
+    <dd>this tag aloows you to italicize text. </dd>
 
-
+    <dt>mark</dt>
+    <dd>Mark will highlight relevant text when needed.</dd>
 </dl>
 
 
