--- a/notes.html
+++ b/notes.html
@@ -16,20 +16,21 @@
             </nav>
         </h3>
     </article>
+    <p>A few things to remember...</p>
 <dl>
-    <dt><td></dt>
+    <dt>html tag 1: td</dt>
     <dd>Td represents a table data cell, imperative tag for tables. </dd>
 
-    <dt>img</dt>
+    <dt>html tag 2: img</dt>
     <dd>This tag allows you to attach pictures to your html website.</dd>
 
-    <dt>a href</dt>
+    <dt>html tag 3: a href</dt>
     <dd>This tag allows you to anchor a link and add the name for the link that will show up on the web page. </dd>
 
-    <dt>i</dt>
+    <dt>html tag 4: i</dt>
     <dd>this tag aloows you to italicize text. </dd>
 
-    <dt>mark</dt>
+    <dt>html tag 5: mark</dt>
     <dd>Mark will highlight relevant text when needed.</dd>
 </dl>
 
