--- a/notes.html
+++ b/notes.html
@@ -18,19 +18,19 @@
     </article>
     <p>A few things to remember...</p>
 <dl>
-    <dt>HTML tag 1: td</dt>
+    <dt>HTML tag: td</dt>
     <dd>Td represents a table data cell, imperative tag for tables. </dd>
 
-    <dt>HTML tag 2: img</dt>
+    <dt>HTML tag: img</dt>
     <dd>This tag allows you to attach pictures to your html website.</dd>
 
-    <dt>HTML tag 3: a href</dt>
+    <dt>HTML tag: a href</dt>
     <dd>This tag allows you to anchor a link and add the name for the link that will show up on the web page. </dd>
 
-    <dt>HTML tag 4: i</dt>
+    <dt>HTML tag: i</dt>
     <dd>this tag aloows you to italicize text. </dd>
 
-    <dt>HTML tag 5: mark</dt>
+    <dt>HTML tag: mark</dt>
     <dd>Mark will highlight relevant text when needed.</dd>
 </dl>
 
