--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
-<html>
     <!DOCTYPE html>
-    <html lang="en">
-     <head>
-       <!-- Document information -->
-       <meta charset="UTF-8">
-       <title>Assignment 1</title>
-     </head>
-     <body>
-        <h1>Mary Maloney</h1>
-        <article>About Me</article>
-        <p> Hello! My name is Mary Maloney. I grew up the oldest of nine children, all girls save one boy. I jokingly consider myself their second mother since I did my fair share of child rearing. Before attending Algonquin College for the Interactive Media Design program, I went to the University of Ottawa for Film Studies and English Literature. I used my extra credits on any music class I could get into, though I do not have any musical abilities to boast. I have <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr> and I’ve always prioritized following my interests rather than trying to find one set career.
+      <html lang="en">
+    <head>
+      <!-- Document information -->
+        <meta charset="UTF-8">
+        <title>Assignment 1</title>
+         <link href="css/main.css" rel="stylesheet">
+    </head>
+  
+    <body>
+         <header>
+            <h1>Mary Maloney</h1>
+          </header>
+        <article>
+          <h4>About Me</h4>
+          </article>
+          <!-- main text -->
+          <p> Hello! My name is Mary Maloney. I grew up the oldest of nine children, all girls save one boy. I jokingly consider myself their second mother since I did my fair share of child rearing. Before attending Algonquin College for the Interactive Media Design program, I went to the University of Ottawa for Film Studies and English Literature. I used my extra credits on any music class I could get into, though I do not have any musical abilities to boast. I have <abbr title="Attention Deficit Hyperactivity Disorder">ADHD</abbr> and I’ve always prioritized following my interests rather than trying to find one set career.</p>
             <br> 
-            I <em> love</em> everything that flexes my creative muscles, drawing, dancing, and video editing are some examples. I definitely can be described as a jack of all trades, but a master of none. In addition, I love reading and outdoor activities like hiking. A fun fact about me is I would rather have salt and vinegar chips than a dessert any day. Unless it is tiramisu, which I eat a lot of because I serve part time at an Italian restaurant (which I also love).
-            <br>
+           <p> I <em> love</em> everything that flexes my creative muscles, drawing, dancing, and video editing are some examples. I definitely can be described as a jack of all trades, but a master of none. In addition, I love reading and outdoor activities like hiking. A fun fact about me is I would rather have salt and vinegar chips than a dessert any day. Unless it is tiramisu, which I eat a lot of because I serve part time at an Italian restaurant (which I also love). </p>
             <blockquote>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”<sup>[1]</sup>
                 <cite>― Albert Einstein</cite>
-                </blockquote>
-          </p>
+                </blockquote>     
+
           <!--- this is the image -->  
           <main>
           <img src ="images/about-me.jpg" alt="Mary M" width="500" title="A Picture of Me" />
           </main>
           <!--- my silly little list-->
             <article>
-            <p>Some of My Hobbies</p>
+            <h4>Some of My Hobbies</h4>
             <ul>
               <li>being outdoors (swimming, hiking, kayaking, camping etc)</li>
               <li>watching 80s fantasy films</li>
@@ -31,16 +36,17 @@
               <li>karaoke!</li>
              </ul>
           </article>
-  <!--started in other file by accident-->
+           <!--started in other file by accident-->
           <article>
+            <h4>Explore</h4>
                     <nav> 
                       <h2><a href="notes.html">Notes</a></h2>
                     </nav>
-        <article>
+                  </article>
           <!-- making a table-->
           <article>
+            <h4>My Karaoke Songs></h4>
             <table>
-              <caption>My Karaoke Songs</caption>
               <thead>
                 <tr>
                   <th>Song</th>
@@ -70,15 +76,18 @@
           <br>
           <!--this is a fun tidbit-->
                  <article>
+                   <h4>Fun...</h4>
                   <b> My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game!</a></b>
                  </article>
           <br>
           <!-- Document Content -->
           <footer> 
-            <article>[1] quote retrieved from: https://www.goodreads.com/quotes</article>  
-            </footer> 
-          <footer>
-            <article>&copy;Maloney, Ottawa, 2021</article>
+            <article>
+              <h6>[1] quote retrieved from: https://www.goodreads.com/quotes </h6>
+            </article>  
+            <article> 
+              <h6>&copy;Maloney, Ottawa, 2021</h6>
+            </article>
           </footer>
      </body>
 
