--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   </article>
           <!-- making a table-->
           <article>
-            <h4>My Karaoke Songs></h4>
+            <h4>My Karaoke Songs</h4>
             <table>
               <thead>
                 <tr>
