image shadow box

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
   
     <body>
-         <header>
+         <header class="self-title">
             <h1>Mary Maloney</h1>
           </header>
         <article>
@@ -23,7 +23,7 @@
 
           <!--- this is the image -->  
           <main>
-          <img src ="images/about-me.jpg" alt="Mary M" width="500" title="A Picture of Me" />
+          <img src ="images/about-me.jpg" id="my-image" alt="Mary M" width="500" title="A Picture of Me" />
           </main>
           <!--- my silly little list-->
             <article>
