--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <!--- my silly little list-->
             <article>
             <h4>Some of My Hobbies</h4>
-            <ul>
+            <ul class="squares">
               <li>being outdoors (swimming, hiking, kayaking, camping etc)</li>
               <li>watching 80s fantasy films</li>
               <li>going to restaurants with friends</li>
