--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
           <br>
           <!--this is a fun tidbit-->
                  <article>
+                   <div id="random">
                    <h4>Fun...</h4>
                   <b> My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game!</a></b>
-                 </article>
+                 </div>
+                </article>
           <br>
           <!-- Document Content -->
           <footer> 
