--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <!DOCTYPE html>
-      <html lang="en">
-    <head>
+         <html lang="en">
+=  <head>
       <!-- Document information -->
         <meta charset="UTF-8">
         <title>Assignment 1</title>
@@ -37,7 +37,7 @@
           </article>
            <!--started in other file by accident-->
           <article>
-            <h4>Explore</h4>
+            <h4>Explore:</h4>
                     <nav> 
                       <h2><a href="notes.html">Notes</a></h2>
                     </nav>
@@ -76,7 +76,7 @@
           <!--this is a fun tidbit-->
                  <article>
                    <div id="random">
-                   <h4>Fun...</h4>
+                   <h4>...</h4>
                   <b> My favourite <a href="https://www.jetpunk.com/quizzes/how-many-countries-can-you-name" target="_blank">game!</a></b>
                  </div>
                 </article>
