--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
     <!DOCTYPE html>
          <html lang="en">
-=  <head>
+   <head>
       <!-- Document information -->
         <meta charset="UTF-8">
         <title>Assignment 1</title>
